--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-program-iconfont-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "keywords": [
     "mini-program",
@@ -13,6 +13,9 @@
   "repository": "git@github.com:fwh1990/mini-program-iconfont-cli.git",
   "author": "范文华 <531362022@qq.com>",
   "license": "MIT",
+  "bin": {
+    "iconfont": "./index.js"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "colors": "^1.3.3",
