feat: Support qq program

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "wechat-program",
     "alipay-program",
     "baidu-program",
-    "toutiao-program"
+    "toutiao-program",
+    "qq-program"
   ],
   "repository": "git@github.com:fwh1990/mini-program-iconfont-cli.git",
   "author": "范文华 <531362022@qq.com>",
@@ -21,7 +22,8 @@
     "iconfont-wechat": "./commands/createWechatIcon.js",
     "iconfont-alipay": "./commands/createAlipayIcon.js",
     "iconfont-baidu": "./commands/createBaiduIcon.js",
-    "iconfont-toutiao": "./commands/createToutiaoIcon.js"
+    "iconfont-toutiao": "./commands/createToutiaoIcon.js",
+    "iconfont-qq": "./commands;createQqIcon.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
