--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "iconfont-alipay": "./commands/createAlipayIcon.js",
     "iconfont-baidu": "./commands/createBaiduIcon.js",
     "iconfont-toutiao": "./commands/createToutiaoIcon.js",
-    "iconfont-qq": "./commands;createQqIcon.js"
+    "iconfont-qq": "./commands/createQqIcon.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
