fix: Compatible with rpx mode

--- a/src/templates/alipay.js.template
+++ b/src/templates/alipay.js.template
@@ -8,5 +8,24 @@ Component({
   },
   data: {
     quot: '"',
+    svgSize: #size#,
+  },
+  didMount() {
+    const size = this.props.size;
+
+    if (size !== this.data.svgSize) {
+      this.setData({
+        svgSize: #rpx# ? size / 750 * my.getSystemInfoSync().windowWidth : size
+      });
+    }
+  },
+  disUpdate(prevProps) {
+    const size = this.props.size;
+
+    if (size !== prevProps.size) {
+      this.setData({
+        svgSize: #rpx# ? size / 750 * my.getSystemInfoSync().windowWidth : size,
+      });
+    }
   },
 });
