--- a/src/templates/toutiao.js.template
+++ b/src/templates/toutiao.js.template
@@ -8,20 +8,24 @@ Component({
     color: {
       type: null,
       value: '',
-      observer: function(color, originalColor) {
-        if (color !== originalColor) {
-          this.setData({
-            colorIsString: typeof color === 'string',
-          });
-        }
+      observer: function(color) {
+        this.setData({
+          colorIsString: typeof color === 'string',
+        });
       }
     },
     size: {
       type: Number,
       value: #size#,
+      observer: function(size) {
+        this.setData({
+          svgSize: #rpx# ? size / 750 * tt.getSystemInfoSync().windowWidth : size,
+        });
+      },
     },
   },
   data: {
+    svgSize: #rpx# ? #size# / 750 * tt.getSystemInfoSync().windowWidth : #size#,
     quot: '"',
     colorIsString: false,
   },
