--- a/src/templates/wechat.js.template
+++ b/src/templates/wechat.js.template
@@ -7,21 +7,26 @@ Component({
     // string | string[]
     color: {
       type: null,
-      observer: function(color, originalColor) {
-        if (color !== originalColor) {
-          this.setData({
-            colors: this.fixColor()
-          });
-        }
+      observer: function() {
+        this.setData({
+          colors: this.fixColor()
+        });
       }
     },
     size: {
       type: Number,
       value: #size#,
+      observer: function(size) {
+        this.setData({
+          svgSize: #rpx# ? size / 750 * wx.getSystemInfoSync().windowWidth : size,
+        });
+      },
     },
   },
   data: {
-    colors: ''
+    colors: '',
+    svgSize: #rpx# ? #size# / 750 * wx.getSystemInfoSync().windowWidth : #size#,
+    quot: '"',
   },
   methods: {
     fixColor: function() {
