--- a/src/templates/alipay.js.template
+++ b/src/templates/alipay.js.template
@@ -15,7 +15,7 @@ Component({
 
     if (size !== this.data.svgSize) {
       this.setData({
-        svgSize: #rpx# ? size / 750 * my.getSystemInfoSync().windowWidth : size
+        svgSize: #rpx-1:size / 750 * my.getSystemInfoSync().windowWidth:##rpx-0:size:#,
       });
     }
   },
@@ -24,7 +24,7 @@ Component({
 
     if (size !== prevProps.size) {
       this.setData({
-        svgSize: #rpx# ? size / 750 * my.getSystemInfoSync().windowWidth : size,
+        svgSize: #rpx-1:size / 750 * my.getSystemInfoSync().windowWidth:##rpx-0:size:#,
       });
     }
   },
