--- a/src/templates/baidu.js.template
+++ b/src/templates/baidu.js.template
@@ -14,13 +14,13 @@ Component({
       value: #size#,
       observer: function(size) {
         this.setData({
-          svgSize: #rpx# ? size / 750 * swan.getSystemInfoSync().windowWidth : size,
+          svgSize: #rpx-1:size / 750 * swan.getSystemInfoSync().windowWidth:##rpx-0:size:#,
         });
       },
     },
   },
   data: {
     quot: '"',
-    svgSize: #rpx# ? #size# / 750 * swan.getSystemInfoSync().windowWidth : #size#,
+    svgSize: #rpx-1:#size# / 750 * swan.getSystemInfoSync().windowWidth:##rpx-0:#size#:#,
   },
 });
