--- a/src/templates/toutiao.js.template
+++ b/src/templates/toutiao.js.template
@@ -19,13 +19,13 @@ Component({
       value: #size#,
       observer: function(size) {
         this.setData({
-          svgSize: #rpx# ? size / 750 * tt.getSystemInfoSync().windowWidth : size,
+          svgSize: #rpx-1:size / 750 * tt.getSystemInfoSync().windowWidth:##rpx-0:size:#,
         });
       },
     },
   },
   data: {
-    svgSize: #rpx# ? #size# / 750 * tt.getSystemInfoSync().windowWidth : #size#,
+    svgSize: #rpx-1:#size# / 750 * tt.getSystemInfoSync().windowWidth:##rpx-0:#size#:#,
     quot: '"',
     colorIsString: false,
   },
