--- a/src/templates/wechat.js.template
+++ b/src/templates/wechat.js.template
@@ -18,14 +18,14 @@ Component({
       value: #size#,
       observer: function(size) {
         this.setData({
-          svgSize: #rpx# ? size / 750 * wx.getSystemInfoSync().windowWidth : size,
+          svgSize: #rpx-1:size / 750 * wx.getSystemInfoSync().windowWidth:##rpx-0:size:#,
         });
       },
     },
   },
   data: {
     colors: '',
-    svgSize: #rpx# ? #size# / 750 * wx.getSystemInfoSync().windowWidth : #size#,
+    svgSize: #rpx-1:#size# / 750 * wx.getSystemInfoSync().windowWidth:##rpx-0:#size#:#,
     quot: '"',
   },
   methods: {
