--- a/src/templates/baidu.js.template
+++ b/src/templates/baidu.js.template
@@ -8,6 +8,11 @@ Component({
     color: {
       type: null,
       value: '',
+      observer: function(color) {
+        this.setData({
+          isStr: typeof color === 'string',
+        });
+      }
     },
     size: {
       type: Number,
@@ -22,5 +27,6 @@ Component({
   data: {
     quot: '"',
     svgSize: #rpx-1:#size# / 750 * swan.getSystemInfoSync().windowWidth:##rpx-0:#size#:#,
+    isStr: true,
   },
 });
