--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "colors": "^1.3.3",
+    "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
@@ -35,6 +36,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.0",
     "@types/glob": "^7.1.1",
     "@types/minimist": "^1.2.0",
     "@types/mkdirp": "^0.5.2",
