fix: Convert color from hex to rgb style

--- a/src/templates/kuaishou.js.template
+++ b/src/templates/kuaishou.js.template
@@ -25,6 +25,7 @@ Component({
     },
   },
   data: {
+    colors: '',
     svgSize: #rpx-1:#size# / 750 * ks.getSystemInfoSync().windowWidth:##rpx-0:#size#:#,
     quot: '"',
     isStr: true,
